--- a/src/web/css/customAffiliate.css
+++ b/src/web/css/customAffiliate.css
@@ -29,3 +29,31 @@ form div.required label.control-label:after {
     content:" * ";
     color:red;
 }
+
+.header-100 {
+    width: 100px!important;
+    min-width: 100px!important;
+}
+.header-200 {
+    width: 200px!important;
+    min-width: 200px!important;
+}
+.header-300 {
+    width: 300px!important;
+    min-width: 300px!important;
+}
+.header-400 {
+    width: 400px!important;
+    min-width: 400px!important;
+}
+
+input[disabled],
+select[disabled],
+textarea[disabled],
+input[readonly],
+select[readonly],
+textarea[readonly] {
+    background-color: #f5f5f5!important;
+    border-color: #ddd!important;
+    cursor: not-allowed!important;
+}
