--- a/src/web/css/customAffiliate.css
+++ b/src/web/css/customAffiliate.css
@@ -33,18 +33,26 @@ form div.required label.control-label:after {
 .header-100 {
     width: 100px!important;
     min-width: 100px!important;
+    max-width: 200px!important;
+    overflow: auto;
 }
 .header-200 {
     width: 200px!important;
     min-width: 200px!important;
+    max-width: 300px!important;
+    overflow: auto;
 }
 .header-300 {
     width: 300px!important;
     min-width: 300px!important;
+    max-width: 400px!important;
+    overflow: auto;
 }
 .header-400 {
     width: 400px!important;
     min-width: 400px!important;
+    max-width: 500px!important;
+    overflow: auto;
 }
 
 input[disabled],
@@ -57,3 +65,5 @@ textarea[readonly] {
     border-color: #ddd!important;
     cursor: not-allowed!important;
 }
+
+.btn-pink
