--- a/src/web/css/customAffiliate.css
+++ b/src/web/css/customAffiliate.css
@@ -26,32 +26,35 @@ li.nav-item.mb-5 {
 }
 
 form div.required label.control-label:after {
-    content:" * ";
-    color:red;
+    content: " * ";
+    color: red;
 }
 
 .header-100 {
-    width: 100px!important;
-    min-width: 100px!important;
-    max-width: 200px!important;
+    width: 100px !important;
+    min-width: 100px !important;
+    max-width: 200px !important;
     overflow: auto;
 }
+
 .header-200 {
-    width: 200px!important;
-    min-width: 200px!important;
-    max-width: 300px!important;
+    width: 200px !important;
+    min-width: 200px !important;
+    max-width: 300px !important;
     overflow: auto;
 }
+
 .header-300 {
-    width: 300px!important;
-    min-width: 300px!important;
-    max-width: 400px!important;
+    width: 300px !important;
+    min-width: 300px !important;
+    max-width: 400px !important;
     overflow: auto;
 }
+
 .header-400 {
-    width: 400px!important;
-    min-width: 400px!important;
-    max-width: 500px!important;
+    width: 400px !important;
+    min-width: 400px !important;
+    max-width: 500px !important;
     overflow: auto;
 }
 
@@ -61,16 +64,16 @@ textarea[disabled],
 input[readonly],
 select[readonly],
 textarea[readonly] {
-    background-color: #f5f5f5!important;
-    border-color: #ddd!important;
-    cursor: not-allowed!important;
+    background-color: #f5f5f5 !important;
+    border-color: #ddd !important;
+    cursor: not-allowed !important;
 }
 
 .lg-backdrop {
     z-index: 1050;
 }
 
-.modal-content .refresh-container{
+.modal-content .refresh-container {
     position: absolute;
     height: 100%;
     top: 0;
@@ -79,4 +82,17 @@ textarea[readonly] {
     background: rgba(255, 255, 255, 0.5) none repeat scroll 0 0;
     width: 100%;
     display: none;
+}
+
+.select2-container .select2-selection--single .select2-selection__clear {
+    position: absolute !important;
+    right: 25px !important;
+}
+
+.select2-container .select2-selection--single .select2-selection__clear:hover {
+    cursor: pointer !important;
+}
+
+.fs-12 {
+    font-size: 12px !important;
 }
